Fixes issue with VideoPlayer modal close button where the button is cut off in smaller viewports

--- a/wp-content/themes/beaverwarrior/components/VideoPlayer/bw-video-player/css/frontend.scss
+++ b/wp-content/themes/beaverwarrior/components/VideoPlayer/bw-video-player/css/frontend.scss
@@ -93,10 +93,15 @@
         @include youtube_video_16_9();
     }
     .featherlight-content {
+        overflow: visible;
+
         width: 90%;
 
         background: none;
         .featherlight-close-icon {
+            top: -10px;
+            right: -10px;
+
             background: none;
         }
         .plyr__control.plyr__control--overlaid {
